force-app/main/default/objects/ProjectService__c/fields/ProjectServiceRetailerOneHubID__c.field-meta.xml
<CustomField>
    <fullName>ProjectServiceRetailerOneHubID__c</fullName>
    <label>Project Service Retailer One Hub ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>