force-app/main/default/objects/ProjectService__c/fields/PurchaseAmount__c.field-meta.xml
<CustomField>
    <fullName>PurchaseAmount__c</fullName>
    <label>Purchase Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>