force-app/main/default/objects/ProjectService__c/fields/QuestionLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>QuestionLastModifiedDate__c</fullName>
    <label>Question Last Modified Date</label>
    <summarizedField>ProjectServiceQuestion__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>ProjectServiceQuestion__c.ProjectService__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>