force-app/main/default/objects/ProjectService__c/fields/QuestionLastModifiedDateforHT__c.field-meta.xml
<CustomField>
    <fullName>QuestionLastModifiedDateforHT__c</fullName>
    <label>Question Last Modified Date for HT</label>
    <type>DateTime</type>
</CustomField>