force-app/main/default/objects/ProjectService__c/fields/RefreshSummary__c.field-meta.xml
<CustomField>
    <fullName>RefreshSummary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates that project service needs it&#39;s summary refreshed</description>
    <label>RefreshSummary</label>
    <type>Checkbox</type>
</CustomField>