force-app/main/default/objects/ProjectService__c/fields/ReportedTotalTime__c.field-meta.xml
<CustomField>
    <fullName>ReportedTotalTime__c</fullName>
    <label>Total Time Reported</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>