force-app/main/default/objects/ProjectService__c/fields/ResponsibleForExecution__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleForExecution__c</fullName>
    <label>Responsible For Execution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Execution Company</fullName>
                <default>true</default>
                <label>Execution Company</label>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>