force-app/main/default/objects/ProjectService__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <formula>Project__r.Retailer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer</label>
    <type>Text</type>
</CustomField>