force-app/main/default/objects/ProjectService__c/fields/RetailerAccount__c.field-meta.xml
<CustomField>
    <fullName>RetailerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retailer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Services (Retailer Account)</relationshipLabel>
    <relationshipName>Project_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>