force-app/main/default/objects/ProjectService__c/fields/RetailerCategory__c.field-meta.xml
<CustomField>
    <fullName>RetailerCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The list of available categories is determined by the &#39;Retailer Account&#39; set on Project Details.</inlineHelpText>
    <label>Category</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Only the selected retailer account categories are allowed.</errorMessage>
        <filterItems>
            <field>AccountCategory__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.RetailerAccount__c</valueField>
        </filterItems>
        <filterItems>
            <field>AccountCategory__c.Account__r.OneHubAccountType__c</field>
            <operation>equals</operation>
            <value>Execution Company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountCategory__c</referenceTo>
    <relationshipLabel>Project Services</relationshipLabel>
    <relationshipName>Project_Services</relationshipName>
    <type>Lookup</type>
</CustomField>