force-app/main/default/objects/ProjectService__c/fields/SalesTax__c.field-meta.xml
<CustomField>
    <fullName>SalesTax__c</fullName>
    <label>SalesTax</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>