force-app/main/default/objects/ProjectService__c/fields/ServiceObjective__c.field-meta.xml
<CustomField>
    <fullName>ServiceObjective__c</fullName>
    <label>Service Objective</label>
    <length>255</length>
    <type>Text</type>
</CustomField>