force-app/main/default/objects/ProjectService__c/fields/ServiceRank__c.field-meta.xml
<CustomField>
    <fullName>ServiceRank__c</fullName>
    <description>This is the priority rank of a service to be performed</description>
    <label>ServiceRank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>