force-app/main/default/objects/ProjectService__c/fields/ServiceSpecialization__c.field-meta.xml
<CustomField>
    <fullName>ServiceSpecialization__c</fullName>
    <formula>TEXT(Service__r.Specialization__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Specialization</label>
    <type>Text</type>
</CustomField>