force-app/main/default/objects/ProjectService__c/fields/ServiceTemplateVersion__c.field-meta.xml
<CustomField>
    <fullName>ServiceTemplateVersion__c</fullName>
    <formula>TEXT(Service__r.SurveyTemplateVersion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Template Version</label>
    <type>Text</type>
</CustomField>