force-app/main/default/objects/ProjectService__c/fields/ServiceTitle__c.field-meta.xml
<CustomField>
    <fullName>ServiceTitle__c</fullName>
    <inlineHelpText>Description of Service -- visible to rep and client</inlineHelpText>
    <label>Service Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>