force-app/main/default/objects/ProjectService__c/fields/ShippingPreference__c.field-meta.xml
<CustomField>
    <fullName>ShippingPreference__c</fullName>
    <description>Shipping Preference</description>
    <inlineHelpText>Shipping Preference</inlineHelpText>
    <label>Shipping Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ship to Worker</fullName>
                <default>true</default>
                <label>Ship to Worker</label>
            </value>
            <value>
                <fullName>Ship to Location</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>