force-app/main/default/objects/ProjectService__c/fields/StartDayNumber__c.field-meta.xml
<CustomField>
    <fullName>StartDayNumber__c</fullName>
    <inlineHelpText>Replaced with Day Number(s)</inlineHelpText>
    <label>Start Day Number - N/A FOR NEW PROJECTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>