force-app/main/default/objects/ProjectService__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <inlineHelpText>Replaced by using Location Export/Import function</inlineHelpText>
    <label>Start Time - N/A FOR NEW PROJECTS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>