force-app/main/default/objects/ProjectService__c/fields/SurveyComplexityScore__c.field-meta.xml
<CustomField>
    <fullName>SurveyComplexityScore__c</fullName>
    <formula>($Setup.SurveyScoreSettings__c.QuestionWeight__c * NumberofTargetQuestions__c * NumberOfTargets__c) + ((NumberofQuestions__c - NumberofTargetQuestions__c) * $Setup.SurveyScoreSettings__c.QuestionWeight__c) +  (NumberofDefinedResponses__c * $Setup.SurveyScoreSettings__c.DefinedResponseWeight__c ) + ( NumberofJumpDefinedResponses__c *  $Setup.SurveyScoreSettings__c.JumpQuestionWeight__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Complexity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>