force-app/main/default/objects/ProjectService__c/fields/SurveyComplexityScoreDRPercent__c.field-meta.xml
<CustomField>
    <fullName>SurveyComplexityScoreDRPercent__c</fullName>
    <formula>((NumberofDefinedResponses__c * $Setup.SurveyScoreSettings__c.DefinedResponseWeight__c ) /  SurveyComplexityScore__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Complexity Score - DR Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>