force-app/main/default/objects/ProjectService__c/fields/SurveyComplexityScoreJumpPercent__c.field-meta.xml
<CustomField>
    <fullName>SurveyComplexityScoreJumpPercent__c</fullName>
    <formula>(( NumberofJumpDefinedResponses__c * $Setup.SurveyScoreSettings__c.JumpQuestionWeight__c ) /  SurveyComplexityScore__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Complexity Score Jump %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>