force-app/main/default/objects/ProjectService__c/fields/SurveyComplexityScoreQPercent__c.field-meta.xml
<CustomField>
    <fullName>SurveyComplexityScoreQPercent__c</fullName>
    <formula>(((NumberofQuestions__c - NumberofTargetQuestions__c) * $Setup.SurveyScoreSettings__c.QuestionWeight__c) /  SurveyComplexityScore__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Complexity Score Question %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>