force-app/main/default/objects/ProjectService__c/fields/SurveyComplexityScoreTQPercent__c.field-meta.xml
<CustomField>
    <fullName>SurveyComplexityScoreTQPercent__c</fullName>
    <formula>(($Setup.SurveyScoreSettings__c.QuestionWeight__c * NumberofTargetQuestions__c) / SurveyComplexityScore__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Complexity Score - TQ %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>