force-app/main/default/objects/ProjectService__c/fields/SurveyScoreThreshold__c.field-meta.xml
<CustomField>
    <fullName>SurveyScoreThreshold__c</fullName>
    <formula>$Setup.SurveyScoreSettings__c.SurveyScoreThreshold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Score Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>