force-app/main/default/objects/ProjectService__c/fields/SurveyScoreWarning__c.field-meta.xml
<CustomField>
    <fullName>SurveyScoreWarning__c</fullName>
    <formula>$Setup.SurveyScoreSettings__c.SurveyScoreWarning__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Score Warning</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>