force-app/main/default/objects/ProjectService__c/fields/TargetLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>TargetLastModifiedDate__c</fullName>
    <label>Target Last Modified Date</label>
    <summarizedField>ProjectServiceTarget__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>ProjectServiceTarget__c.ProjectService__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>