force-app/main/default/objects/ProjectService__c/fields/TargetLastModifiedDateforHT__c.field-meta.xml
<CustomField>
    <fullName>TargetLastModifiedDateforHT__c</fullName>
    <label>Target Last Modified Date for HT</label>
    <type>DateTime</type>
</CustomField>