force-app/main/default/objects/ProjectService__c/fields/TargetType__c.field-meta.xml
<CustomField>
    <fullName>TargetType__c</fullName>
    <label>Target Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>