force-app/main/default/objects/ProjectService__c/fields/TargetUse__c.field-meta.xml
<CustomField>
    <fullName>TargetUse__c</fullName>
    <label>Target Use</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Ingredients</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>