force-app/main/default/objects/ProjectService__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>IF( 

OR(ISNULL(ServiceTitle__c), isblank(ServiceTitle__c)),
Service__r.Name, 
ServiceTitle__c &amp;&quot; - &quot;&amp; Service__r.Name  

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>