force-app/main/default/objects/ProjectService__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variant</label>
    <referenceTo>Variant__c</referenceTo>
    <relationshipLabel>Project Services</relationshipLabel>
    <relationshipName>Project_Services</relationshipName>
    <type>Lookup</type>
</CustomField>