force-app/main/default/objects/ProjectService__c/fields/VariantLanguage__c.field-meta.xml
<CustomField>
    <fullName>VariantLanguage__c</fullName>
    <formula>IF(OR(ISNULL(Variant__c),Variant__c == &#39;&#39;), &#39;English&#39;, Variant__r.Language__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language</label>
    <type>Text</type>
</CustomField>