force-app/main/default/objects/ProjectService__c/recordTypes/Booked.recordType-meta.xml
<RecordType>
    <fullName>Booked</fullName>
    <active>true</active>
    <label>Booked</label>
</RecordType>