force-app/main/default/objects/ProjectService__c/recordTypes/InProgress.recordType-meta.xml
<RecordType>
    <fullName>InProgress</fullName>
    <active>true</active>
    <label>In Progress</label>
</RecordType>