force-app/main/default/objects/ProjectService__c/recordTypes/Planning.recordType-meta.xml
<RecordType>
    <fullName>Planning</fullName>
    <active>true</active>
    <label>Planning</label>
</RecordType>