force-app/main/default/objects/ProjectService__c/validationRules/BlockSingleServiceProject.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockSingleServiceProject</fullName>
    <active>true</active>
    <errorConditionFormula>IF( 
    Project__r.IsSingleServiceProject__c, 
    ( 
       if(Service__r.IsSingleService__c, 
           if(Project__r.ServiceCount__c&gt;0,true,false ), 
          true)
    ),
    false
)
&amp;&amp; ISNEW()</errorConditionFormula>
    <errorMessage>Multiple Services not allowed for a Single Service Project</errorMessage>
</ValidationRule>