force-app/main/default/objects/ProjectService__c/validationRules/CanNotOverrideServiceClientVisibility.validationRule-meta.xml
<ValidationRule>
    <fullName>CanNotOverrideServiceClientVisibility</fullName>
    <active>true</active>
    <description>Can not override the service level client visibility if the visible is false</description>
    <errorConditionFormula>AND(Service__r.isVisibleToClient__c == false, isVisibleToClient__c == true)</errorConditionFormula>
    <errorMessage>The service is invisible by the definition and can not be overridden.</errorMessage>
</ValidationRule>