force-app/main/default/objects/ProjectService__c/validationRules/Disallow_negative_numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_negative_numbers</fullName>
    <active>true</active>
    <description>Do not allow negative numbers for certain fields.</description>
    <errorConditionFormula>OR( NumberOfDays__c &lt; 0,  NumberOfWorkers__c &lt; 0,  EstimatedMinutes__c &lt; 0)</errorConditionFormula>
    <errorMessage>Negative numbers are not allowed, please correct them.</errorMessage>
</ValidationRule>