force-app/main/default/objects/ProjectService__c/validationRules/Invalid_Number_of_Workers_For_Bundled_Pr.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Number_of_Workers_For_Bundled_Pr</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Project__r.BundleServices__c == true,  NumberOfWorkers__c &gt; 1)</errorConditionFormula>
    <errorDisplayField>NumberOfWorkers__c</errorDisplayField>
    <errorMessage>Number of Workers cannot be more than 1 for a bundled project.</errorMessage>
</ValidationRule>