force-app/main/default/objects/ProjectService__c/validationRules/Invalid_Number_Of_Workers_ServiceAMW_Fal.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Number_Of_Workers_ServiceAMW_Fal</fullName>
    <active>true</active>
    <description>Multiple workers are not allowed if the service-&gt;AllowMultipleWorkers is set to false.</description>
    <errorConditionFormula>AND( NumberOfWorkers__c &gt; 1,  Service__r.IsNumberOfWorkersRequired__c == false)</errorConditionFormula>
    <errorDisplayField>NumberOfWorkers__c</errorDisplayField>
    <errorMessage>Number Of Workers cannot be more than 1 if the service&#39;s AllowMultipleWorkers is set to false.</errorMessage>
</ValidationRule>