force-app/main/default/objects/ProjectService__c/validationRules/NumberOfWorkerShouldLessThan100.validationRule-meta.xml
<ValidationRule>
    <fullName>NumberOfWorkerShouldLessThan100</fullName>
    <active>true</active>
    <description>The number of worker can not be bigger than 99</description>
    <errorConditionFormula>OR(NumberOfWorkers__c  &lt;=   0, NumberOfWorkers__c   &gt;  99)</errorConditionFormula>
    <errorDisplayField>NumberOfWorkers__c</errorDisplayField>
    <errorMessage>The number of workers must be between 1 and 99.</errorMessage>
</ValidationRule>