force-app/main/default/objects/ProjectService__c/validationRules/PcardLeadtime.validationRule-meta.xml
<ValidationRule>
    <fullName>PcardLeadtime</fullName>
    <active>true</active>
    <errorConditionFormula>AND( PurchaseAmount__c &gt; 0, Today()  &lt; Project__r.StartDate__c  -  $Setup.PcardLeadTimeDuration__c.PcardLeadTime__c )</errorConditionFormula>
    <errorMessage>Pcard lead time must be 5 days or greater than start date.</errorMessage>
</ValidationRule>