force-app/main/default/objects/ProjectService__c/validationRules/Service_Title_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Title_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK(ServiceTitle__c), ISNULL(ServiceTitle__c))</errorConditionFormula>
    <errorDisplayField>ServiceTitle__c</errorDisplayField>
    <errorMessage>Service Title cannot be empty.</errorMessage>
</ValidationRule>