force-app/main/default/objects/ProjectService__c/validationRules/StartDayNumber_cannot_be_LE_0.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDayNumber_cannot_be_LE_0</fullName>
    <active>true</active>
    <errorConditionFormula>StartDayNumber__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>StartDayNumber__c</errorDisplayField>
    <errorMessage>Invalid Start Day Number, cannot be less than or equal to 0.</errorMessage>
</ValidationRule>