force-app/main/default/objects/ProjectService__c/validationRules/Validate_Estimated_Minutes.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Estimated_Minutes</fullName>
    <active>true</active>
    <errorConditionFormula>OR(EstimatedMinutes__c &lt; 0,  EstimatedMinutes__c &gt; 1440)</errorConditionFormula>
    <errorDisplayField>EstimatedMinutes__c</errorDisplayField>
    <errorMessage>Estimated Minutes cannot be less than 0 or more than 1440</errorMessage>
</ValidationRule>