force-app/main/default/objects/ProjectService__c/validationRules/Validate_Filter_Product_byLocation_Allwd.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Filter_Product_byLocation_Allwd</fullName>
    <active>true</active>
    <errorConditionFormula>AND (CheckDistribution__c == true,  Service__r.AllowDistribution__c == false)</errorConditionFormula>
    <errorDisplayField>CheckDistribution__c</errorDisplayField>
    <errorMessage>Filtering products by location is not allowed for this service template.</errorMessage>
</ValidationRule>