force-app/main/default/objects/ProjectService__c/validationRules/Validate_NoOfDays_BasedOnProjectWindow.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_NoOfDays_BasedOnProjectWindow</fullName>
    <active>true</active>
    <description>Service Number Of Days should be within the Project Window</description>
    <errorConditionFormula>AND(ISCHANGED(NumberOfDays__c), OR(NumberOfDays__c&gt;Project__r.NumberOfDays__c,NumberOfDays__c &lt; 1))</errorConditionFormula>
    <errorMessage>Number of Days Should be within the Project Window</errorMessage>
</ValidationRule>