force-app/main/default/objects/ProjectService__c/validationRules/Validate_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Start_Time</fullName>
    <active>true</active>
    <description>To validate and make sure start time is in correct format</description>
    <errorConditionFormula>NOT(
OR(
ISBLANK(StartTime__c),
REGEX(StartTime__c, &quot;^(1[0-2]|0?[1-9]):[0-5][0-9] ([AaPp][Mm])$&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>StartTime__c</errorDisplayField>
    <errorMessage>Invalid Start Time.</errorMessage>
</ValidationRule>