force-app/main/default/objects/ProjectService__c/validationRules/validatePurchaseAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>validatePurchaseAmount</fullName>
    <active>true</active>
    <errorConditionFormula>OR( PurchaseAmount__c  &lt; 0,
PurchaseAmount__c   &gt; 500)</errorConditionFormula>
    <errorMessage>Please check to ensure purchase amount is between $0 and $500.</errorMessage>
</ValidationRule>