force-app/main/default/objects/ProjectService__c/validationRules/ValidateStartTime_ProjectType.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateStartTime_ProjectType</fullName>
    <active>true</active>
    <description>allow starttime only for Non Bundled work</description>
    <errorConditionFormula>AND(
   Project__r.ProjectType__r.AllowBundlingOfServices__c ,
   NOT(ISBLANK(StartTime__c))
  )</errorConditionFormula>
    <errorDisplayField>StartTime__c</errorDisplayField>
    <errorMessage>Start Time is allowed only for Non-Bundled work.</errorMessage>
</ValidationRule>